--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "expeditious-engine-memory": "^0.2.1",
     "express": "^4.18.1",
     "express-expeditious": "^5.1.1",
+    "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "mercadopago": "^1.5.14",
     "mysql2": "^2.3.3"
